--- a/app/views/seasons/show.html.haml
+++ b/app/views/seasons/show.html.haml
@@ -9,7 +9,7 @@
       = @season.start.strftime("%B %e, %Y")
     %div.col-sm-4
       %span.label.label-primary
-        End
+        End:
       = "&nbsp;".html_safe
       = @season.end.strftime("%B %e, %Y")
 
