--- a/app/views/students/upload.html.haml
+++ b/app/views/students/upload.html.haml
@@ -1,6 +1,8 @@
 %div.jumbotron
   %h1
     Import Students
+  %div.lead
+    = link_to "Upload Template", upload_template_path, class: "btn btn-success"
 
 %div.row.bottom-margin
   %div.col-sm-12
