--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,3 +69,24 @@ body {
     max-height: 420px;
     overflow-y: auto;
 }
+
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -20px;
+  /* Pad bottom by footer height */
+  padding: 0 0 20px;
+}
+
+/* Set the fixed height of the footer here */
+#footer {
+  height: 20px;
+  background-color: #f5f5f5;
+}
+
+html,
+body {
+    height: 100%;
+      /* The html and body elements cannot have any padding or margin. */
+}
