--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,9 +3,9 @@
   %head
     %title
       Purdue Bands | Online Toolbox
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'application', media: 'all'
     = stylesheet_link_tag params[:controller]
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application'
     = javascript_include_tag params[:controller]
     = csrf_meta_tags
     %meta{name:"viewport",content:"width=device-width, initial-scale=1"}
