working on favorite display, season is mostly ready

--- a/app/views/favorites/show.html.erb
+++ b/app/views/favorites/show.html.erb
@@ -6,13 +6,13 @@
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @favorite.type %>
+  <strong>Dest:</strong>
+  <%= @favorite.dest_id %>
 </p>
 
 <p>
-  <strong>Index:</strong>
-  <%= @favorite.index %>
+  <strong>Dest type:</strong>
+  <%= @favorite.dest_type %>
 </p>
 
 <%= link_to 'Edit', edit_favorite_path(@favorite) %> |
