--- a/app/views/favorites/_form.html.erb
+++ b/app/views/favorites/_form.html.erb
@@ -13,15 +13,15 @@
 
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+    <%= f.number_field :user_id %>
   </div>
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.label :dest_id %><br>
+    <%= f.number_field :dest_id %>
   </div>
   <div class="field">
-    <%= f.label :index %><br>
-    <%= f.number_field :index %>
+    <%= f.label :dest_type %><br>
+    <%= f.number_field :dest_type %>
   </div>
   <div class="actions">
     <%= f.submit %>
