--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -6,8 +6,8 @@
   <thead>
     <tr>
       <th>User</th>
-      <th>Type</th>
-      <th>Index</th>
+      <th>Dest</th>
+      <th>Dest type</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,8 +16,8 @@
     <% @favorites.each do |favorite| %>
       <tr>
         <td><%= favorite.user_id %></td>
-        <td><%= favorite.type %></td>
-        <td><%= favorite.index %></td>
+        <td><%= favorite.dest_id %></td>
+        <td><%= favorite.dest_type %></td>
         <td><%= link_to 'Show', favorite %></td>
         <td><%= link_to 'Edit', edit_favorite_path(favorite) %></td>
         <td><%= link_to 'Destroy', favorite, method: :delete, data: { confirm: 'Are you sure?' } %></td>
