--- a/app/views/static/_favorite_section.html.haml
+++ b/app/views/static/_favorite_section.html.haml
@@ -1,17 +1,23 @@
-%div.bottom-margin
+%div.bottom-margin.favorite-entry
   - section = Section.find(favorite.dest_id)
   %div.row
     %div.col-sm-12
       %strong
+        = FavoritesHelper.favorite_field(section_id: section.id, user_id: current_user.id)
         = section.season.name
         |
         = section.name
   %div.row
     %div.col-sm-12
       %div.btn-group.btn-group-justified
-        = link_to fa_icon("desktop"), section_path(section), class: "btn btn-sm btn-default", title: "Show Section"
-        = link_to fa_icon("users"), search_students_terms_path("large_filter"=>["section #{section.id}"], "fields"=>[3, 5]), method: :post, class: "btn btn-sm btn-default", title: "Section Breakdown"
-        = link_to "#{section.rookies}/#{section.returning_members}", "#", class: "btn btn-sm btn-default", title: "Section Ratio", disabled: "disabled"
+        = link_to fa_icon("desktop"), section_path(section), class: "btn btn-sm btn-default", title: "Show"
+        = link_to fa_icon("users") + " #{section.rookies} | #{section.returning_members}", search_students_terms_path("large_filter"=>["section #{section.id}"], "fields"=>[3, 5]), method: :post, class: "btn btn-sm btn-default", title: "Section Breakdown"
+        %div.btn-group
+          %button.btn.btn-sm.btn-default.dropdown-toggle{:href => "#", "role" => "button", "data-toggle" => "dropdown", "data-target" => "#", "aria-expanded" => "false"}
+            Ranks
+          %ul.dropdown-menu{"role" => "menu"}
+            - section.ranks.each do |rank|
+              %li
+                = link_to rank.name, search_students_terms_path("large_filter"=>["rank #{rank.id}"], "fields"=>[3, 5]), method: :post
         = link_to fa_icon("comment"), section_notes_path(section), class: "btn btn-sm btn-default", title: "Notes"
         = link_to fa_icon("pencil"), edit_section_path(section), class: "btn btn-sm btn-default", title: "Edit"
-        = link_to fa_icon("close"), favorite, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-danger", title: "Remove Favorite"
