Added fields to settings panel, and set up the links for the rest

--- a/app/views/fields/_form.html.haml
+++ b/app/views/fields/_form.html.haml
@@ -22,7 +22,7 @@
       %div.field
         = f.label :description
         = f.text_field :description, class: "form-control"
-      %div.field
+      %div.field.bottom-margin
         = f.label :options
         %div.row
           %div.col-sm-12
