--- a/app/views/fields/edit.html.haml
+++ b/app/views/fields/edit.html.haml
@@ -1,7 +1,16 @@
 %div.jumbotron
   %h1
-    Editing Field
+    Settings
 
-= render 'form'
+%div.row
+  %div.col-sm-3
+    = render 'shared/settings_panel'
+  %div.col-sm-9
+    %div.panel.panel-primary
+      %div.panel-body
+        %h1
+          Editing Field
 
-= link_to 'Back', fields_path, class: "btn btn-danger"
+        = render 'form'
+
+        = link_to 'Back', fields_path, class: "btn btn-danger"
