Added announcements to help system

--- a/app/views/fields/edit.html.haml
+++ b/app/views/fields/edit.html.haml
@@ -8,7 +8,7 @@
   %div.col-sm-9
     %div.panel.panel-primary
       %div.panel-body
-        %h1
+        %h1.no-top-margin
           Editing Field
 
         = render 'form'
