Added instruments to settings

--- a/app/views/contact_types/index.html.haml
+++ b/app/views/contact_types/index.html.haml
@@ -11,7 +11,12 @@
         %h1.no-top-margin
           Contact Types
 
-        %table.table
+        %div.alert.alert-danger
+          %strong
+            Warning!
+          Removing entries here will affect comment for for recruits
+
+        %table.table.table-hover
           %thead
             %tr
               %th
