--- a/app/views/shared/_settings_panel.html.haml
+++ b/app/views/shared/_settings_panel.html.haml
@@ -13,7 +13,7 @@
     = link_to "Contact Types", contact_types_path
   %li{role:"presentation", class: (controller.class == FieldsController ? 'active' : '')}
     = link_to "Fields", fields_path
-  %li{role:"presentation"}
+  %li{role:"presentation", class: (controller.class == InstrumentsController ? 'active' : '')}
     = link_to "Instruments", instruments_path
   %li{role:"presentation"}
     = link_to "Ensembles", ensembles_path
