--- a/app/views/shared/_settings_panel.html.haml
+++ b/app/views/shared/_settings_panel.html.haml
@@ -17,6 +17,6 @@
     = link_to "Instruments", instruments_path
   %li{role:"presentation", class: (controller.class == EnsemblesController ? 'active' : '')}
     = link_to "Ensembles", ensembles_path
-  %li{role:"presentation"}
+  %li{role:"presentation", class: (controller.class == RecruitStatusesController ? 'active' : '')}
     = link_to "Recruit Statuses", recruit_statuses_path
 
