--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,15 +11,17 @@
     %meta{name:"viewport",content:"width=device-width, initial-scale=1"}
   %div#wrap
     %body
-      = render 'layouts/navbar'
+      - if user_signed_in?
+        = render 'layouts/navbar'
     %div.container.bottom-spacer#main-container
       - flash.each do |key, value|
         %div{ :class => flash_class(key) + " alert-dismissible", role: "alert"}
           %button{ type: "button", class: "close", "data-dismiss" => "alert", "aria-label" => "Close" }
             = fa_icon "close"
           = value
-      %ol.breadcrumb
-        = render_breadcrumbs tag: "li", separator: ""
+      - if user_signed_in?
+        %ol.breadcrumb
+          = render_breadcrumbs tag: "li", separator: ""
       = yield
   %div#footer
     .container.center
