--- a/app/views/gigs/index.html.haml
+++ b/app/views/gigs/index.html.haml
@@ -26,7 +26,7 @@
                     %th
                       Gigs
                     %th
-                      Instument
+                      Instrument
                     %th
                       Rank
                     %th.text-center
