Added permissions for sectio notes and editing sections

--- a/app/views/section_notes/notes.html.haml
+++ b/app/views/section_notes/notes.html.haml
@@ -4,7 +4,8 @@
     |
     = @section.name
 
-= render 'form'
+- if current_user.check_permissions(:create_section_notes)
+  = render 'form'
 
 - @section.section_notes.order('created_at DESC').each do |note|
   %div.panel.panel-primary
