Made it easier to add students to sections

--- a/app/views/favorite_instruments/user.html.haml
+++ b/app/views/favorite_instruments/user.html.haml
@@ -1,6 +1,6 @@
 %div.jumbotron
   %h1
-    Favorited Instruments
+    Favorite Instruments
 
 = form_tag create_multiple_user_favorite_instruments_path do
   %div.row
