Added more controls to make sure admin account is not disabled

--- a/app/views/users/registrations/all_users.html.haml
+++ b/app/views/users/registrations/all_users.html.haml
@@ -9,63 +9,10 @@
     %div.panel.panel-primary
       %div.panel-body
         %h1.no-top-margin
-          Users
-
-        %div.table-responsive
-          %table.table.table-hover
-            %thead
-              %tr
-                %th
-                  Name
-                %th
-                  Email
-                %th
-                  Admin
-                %th
-                  Director
-                %th
-                  Recruiter
-                %th
-                  SL
-                %th
-                  CoS
-                %th
-                  Edit
-                %th
-                  Reset Password
-                %th
-                  Block
-            %tbody
-              - @users.each do |user|
-                %tr
-                  %td
-                    = user.full_name
-                  %td
-                    = user.email
-                  %td.center
-                    - if user.admin
-                      = fa_icon "check"
-                  %td.center
-                    - if user.director
-                      = fa_icon "check"
-                  %td.center
-                    - if user.recruiter
-                      = fa_icon "check"
-                  %td.center
-                    - if user.student_leader
-                      = fa_icon "check"
-                  %td.center
-                    - if user.chief_of_staff
-                      = fa_icon "check"
-                  %td.center
-                    = link_to (fa_icon "pencil"), edit_user_permissions_path(user), class: "btn btn-sm btn-success"
-                  %td.center
-                    = link_to (fa_icon "key"), reset_user_password_path(user), class: "btn btn-sm btn-primary", data: { confirm: 'Are you sure? This is effective immediately.' }
-                  %td.center
-                    - if user.banned
-                      = link_to (fa_icon "plus"), toggle_banned_user_path(user), class: "btn btn-sm btn-success"
-                    - else
-                      = link_to (fa_icon "close"), toggle_banned_user_path(user), class: "btn btn-sm btn-danger"
-        = link_to "New User", new_custom_user_path, class: "btn btn-success"
-
+          Active Users
+          = link_to "New User", new_custom_user_path, class: "btn btn-success float-right"
+        = render 'users_table', user_list: @users.where(banned:false)
+        %h1.no-top-margin
+          Blocked Users
+        = render 'users_table', user_list: @users.where(banned:true)
 
