Added case insensitive instruments

--- a/app/views/students/upload.html.haml
+++ b/app/views/students/upload.html.haml
@@ -2,6 +2,9 @@
   %h1
     Import Students
   %div.lead
+    %i
+      Note: Only 100 Students may be uploaded at a time
+  %div.lead
     = link_to "Upload Template", upload_template_path, class: "btn btn-success"
 
 %div.row.bottom-margin
